syntax = "proto3";

package com.matheus.playground.grpc;

option java_multiple_files = true;
option java_package = "com.matheus.playground.grpc";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}